<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/base_head"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/record_name_edt"
                style="@style/form_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/record_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/record_amount_edt"
                style="@style/form_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/record_amount"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/record_date_edt"
                style="@style/form_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:focusable="false"
                android:hint="@string/record_date"
                android:inputType="text" />

            <RadioGroup
                android:id="@+id/record_type_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/type_in_rb"
                    style="@style/text_base_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/type_in" />

                <RadioButton
                    android:id="@+id/type_out_rb"
                    style="@style/text_base_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/type_out" />
            </RadioGroup>

            <Spinner
                android:id="@+id/record_category_spi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

            </Spinner>

            <EditText
                android:id="@+id/record_detail_edt"
                style="@style/form_edit_text"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="10dp"
                android:gravity="top|left"
                android:hint="@string/record_detail"
                android:maxLines="14"
                android:scrollbars="vertical" />

            <Button
                android:id="@+id/record_add_btn"
                style="@style/button_base_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/record_add" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>