<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_e8e8e8"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/colorWhite"
        android:padding="10dp">

        <ImageView
            android:id="@+id/head_img"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorWhite" />

        <TextView
            android:id="@+id/username_txt"
            style="@style/text_base_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/head_img"
            android:text="USERNAME" />


        <TextView
            android:id="@+id/ic_qr_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/ic_qr_code"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/ic_setting"
                style="@style/profile_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ic_setting" />

            <TextView
                android:id="@+id/setting_txt"
                style="@style/profile_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/ic_setting"
                android:text="@string/setting"

                />
        </RelativeLayout>

        <View
            style="@style/horizontal_divide_line"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/ic_about"
                style="@style/profile_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ic_about" />

            <TextView
                android:id="@+id/about_txt"
                style="@style/profile_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/ic_about"
                android:text="@string/about"

                />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <Button
            android:id="@+id/logout_btn"
            style="@style/button_base_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout" />
    </LinearLayout>
</LinearLayout>