<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/base_head"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/username_edt"
            style="@style/form_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text" />

        <EditText
            android:id="@+id/password_edt"
            style="@style/form_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <ImageView android:id="@+id/head_img"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/camera"
            android:layout_marginBottom="10dp"
            />
        <Button
            android:id="@+id/register_btn"
            style="@style/form_button"
            android:text="@string/register" />
    </LinearLayout>

</LinearLayout>