<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:visibility="gone">

        <EditText
            android:id="@+id/search_edt"
            style="@style/form_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:hint="@string/search"
            android:inputType="text" />

        <TextView
            android:id="@+id/ic_search"
            style="@style/text_base_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/search_edt"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/ic_search"
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            style="@style/text_base_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="账目列表"
            android:textSize="20sp" />
    </RelativeLayout>

    <View style="@style/horizontal_divide_line" />

    <TextView android:id="@+id/no_data_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_base_style"
        android:text="暂无数据"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:textColor="@color/color_a8a8a8"
        android:textSize="18sp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/records_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>

        <TextView
            android:id="@+id/ic_add_txt"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@id/records_list"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/circle_add_btn"
            android:gravity="center"
            android:text="@string/ic_add"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </RelativeLayout>


</LinearLayout>